--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -26,39 +26,10 @@ global_job_config:
 # commands to execute.
 # See https://docs.semaphoreci.com/article/62-concepts
 blocks:
-  - name: "Install Dependencies"
-    task:
-      # This block installs all the python dependencies,
-      # as well as all the required Linux packages.
-      # The prologue section is always executed before each job on
-      # the block.
-      # See https://docs.semaphoreci.com/article/50-pipeline-yaml#prologue
-      prologue:
-        commands:
-          # Set the python version.
-          # See https://docs.semaphoreci.com/article/132-sem-service-managing-databases-and-services-on-linux
-          # Install Linux dependencies.
-          - sudo apt-get update && sudo apt-get install -y python3-dev
-      jobs:
-        - name: pip
-          commands:
-            # Get the latest version of our source code from GitHub:
-            # See https://docs.semaphoreci.com/article/54-toolbox-reference#checkout
-            - checkout
-            # Restore dependencies from cache. This command will not fail in
-            # case of a cache miss. In case of a cache hit, pip can use it
-            # to speed up the installation.
-            # For more info on caching, see https://docs.semaphoreci.com/article/149-caching
-            - cache restore
-            # Install python dependencies.
-            # If not found in the cache, pip will download them.
-            - pip download --cache-dir .pip_cache -r requirements.txt
-            # Persist downloaded packages for future jobs.
-            - cache store
-
   - name: "Run Unit Tests"
     task:
       jobs:
         - name: Notebook Test
           commands:
+            - pip install -r requirements.txt
             - pytest --nbmake ipynb -n=auto
