--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -32,9 +32,9 @@ blocks:
         commands:
           - sudo apt-get update && sudo apt-get install -y python3-dev
       jobs:
-        - name: pip
+        - name: run test
           commands:
             - checkout
 
-            - pip download -r requirements.txt
+            - pip install -r requirements.txt
             - pytest --nbmake ipynb -n=auto
