--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -37,4 +37,4 @@ blocks:
             - checkout
 
             - pip install -r requirements.txt
-            - pytest --nbmake ipynb -n=auto
+            - pytest --nbmake -n=auto ./ipynb
