--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -13,6 +13,7 @@ blocks:
             - checkout
             - pip install nbmake pytest-xdist
             - pytest --nbmake -n=auto ./ipynb
+            - python -m ipykernel install --name mycustomkernel
       prologue:
         commands:
           - sem-version python 3.8
